--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,5 +10,11 @@
 
 <%= yield %>
 
+
+<div>
+  <a href="/genres">Жанри</a>
+  <a href="/tags">Теги</a>
+  <a href="/authors">Автори</a>
+</div>
 </body>
 </html>
