--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -1,10 +1,2 @@
 <h2><%= @tag.title %></h2>
-
-<% @books.each do |item|%>
-
-  <a href='/books/<%= item.seo%>'><%= item.title%></a><br/>
-  <% item.authors.each do |author|%>
-    <a href='/authors/<%= author.seo%>'><%= author.full_name%></a><br/>
-  <% end %>
-  <hr/>
-<% end %>
+<%= render partial: "books/list", collection: @books, as: :item  %>
