--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
 
 <hr/>
 <div>
+  <a href="/">Головна</a>
   <a href="/genres">Жанри</a>
   <a href="/tags">Теги</a>
   <a href="/authors">Автори</a>
