--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,2 +1,9 @@
 <h2>книги:</h2>
 <%= render partial: "books/list", collection: @books, as: :item  %>
+
+
+
+<h2>автори:</h2>
+<% @authors.each do |item| %>
+  <a href="/authors/<%= item.seo%>"><%= item.full_name%></a><br/>
+<% end %>
