--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -1,3 +1,5 @@
 <% @items.each do |item|%>
-  <a href='/tags/<%= item.seo%>'><%= item.title%></a><br/>
+  <a href='/authors/<%= item.seo%>'><%= item.title%></a><br/>
 <% end %>
+
+<%= render partial: "layouts/paginator" %>
