--- a/app/views/genres/show.html.erb
+++ b/app/views/genres/show.html.erb
@@ -1,4 +1,4 @@
-<h2><%= @author.full_name %></h2>
+<h2><%= @genre.title %></h2>
 
 <%= render partial: "books/list", collection: @items, as: :item  %>
 
