--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -1,3 +1,4 @@
 <% @items.each do |item|%>
   <a href='/tags/<%= item.seo%>'><%= item.title%></a><br/>
 <% end %>
+<%= render partial: "layouts/paginator" %>
