--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -1,2 +1,3 @@
 <h2><%= @tag.title %></h2>
-<%= render partial: "books/list", collection: @books, as: :item  %>
+<%= render partial: "books/list", collection: @items, as: :item  %>
+<%= render partial: "layouts/paginator" %>
