--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,22 +1,82 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>LibAgreagator</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+<html lang="<%= I18n.locale %>">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title><%= content_for?(:title) ? yield(:title) : "Library" %></title>
+    <meta name="keywords" content="<%= yield(:keywords) if content_for?(:keywords) %>" />
+    <meta name="description" content="<%= yield(:description) if content_for?(:description) %>" />
+    <meta name="og:title" content="<%= content_for?(:title) ? yield(:title) : "Library" %>" />
+    <meta name="og:description" content="<%= yield(:description) if content_for?(:description) %>" />
 
-<%= yield %>
+
+    <%= csrf_meta_tags %>
+
+    <%= stylesheet_link_tag "application", :media => "all" %>
+    <%= favicon_link_tag 'apple-touch-icon-144x144-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '144x144' %>
+    <%= favicon_link_tag 'apple-touch-icon-114x114-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '114x114' %>
+    <%= favicon_link_tag 'apple-touch-icon-72x72-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '72x72' %>
+    <%= favicon_link_tag 'apple-touch-icon-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png' %>
+    <%= favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
+
+    <%= javascript_include_tag "application" %>
+
+    <%= yield(:js) if content_for?(:js) %>
+
+    <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
+    <!--[if lt IE 9]>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js" type="text/javascript"></script>
+    <![endif]-->
+    <meta name="google-site-verification" content="Jo2YvVtXBY7US1SQTeQ2SD6iNadM4Mu-aHMh1WYL-nY" />
+  </head>
+  <body ng-app="siteApp">
+<!-- navbar-default -->
+    <div class="navbar navbar-default navbar-fixed-top top_menu">
+      <div class="container">
+
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="/">library</a>
+        <div class="navbar-collapse collapse navbar-responsive-collapse">
+          <ul class="nav navbar-nav">
+              <li><a href="/">Головна</a></li>
+              <li><a href="/genres">Жанри</a></li>
+              <li><a href="/tags">Теги</a></li>
+              <li><a href="/authors">Автори</a></li>
+          </ul>          
+        </div>
+      </div>
+    </div>
+
+    <%#= bootstrap_flash %>
+
+    <div class="container main_content">
+      <%= yield %>
+      <div class="clearfix"></div>
+    </div> <!-- /container -->
+
+    <footer>
+        <!-- <p>&copy; Company 2016</p> -->
+    </footer>
 
 
-<hr/>
-<div>
-  <a href="/">Головна</a>
-  <a href="/genres">Жанри</a>
-  <a href="/tags">Теги</a>
-  <a href="/authors">Автори</a>
-</div>
-</body>
+
+    <script type="text/javascript">
+        // var angular_dependencies = [];
+        // <%= yield(:plain_js) if content_for?(:plain_js) %>
+        // var site_app = angular.module('siteApp', angular_dependencies); 
+
+        // (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        // (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        // m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        // })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        // ga('create', 'UA-81900102-1', 'auto');
+        // ga('send', 'pageview');
+    </script>
+    <%= yield(:footer_js) if content_for?(:footer_js) %>
+  </body>
 </html>
