--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -1,4 +1,4 @@
 <% @items.each do |item|%>
-  <a href='/genres/<%= item.seo%>'><%= item.title%></a><br/>
+  <a href='/genres/<%= item.seo%>'><span class="glyphicon glyphicon-bookmark" aria-hidden="true"></span> <%= item.title%></a><br/>
 <% end %>
 
