--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -5,6 +5,4 @@
 
 
 <h2>автори:</h2>
-<% @authors.each do |item| %>
-  <a href="/authors/<%= item.seo%>"><%= item.full_name%></a><br/>
-<% end %>
+<%= render partial: "authors/list", collection: @authors, as: :item  %>
