--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,10 +16,74 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+a{
+    color: #653306;
+}
+a:hover{
+    color:#c58a16;
+}
 .main_content{
     margin-top: 70px;
 }
 .col-centered{
     float: none;
     margin: 0 auto;
+}
+.block_center{
+    float:none;
+    margin:0 auto;
+}
+.book_item{
+    padding-left:40px;
+    margin-bottom:20px;
+    background: url('closed_book.png') no-repeat 0% 50%;
+
+    .label{
+        opacity:0.7;
+    }
+    .author_link{
+        font-size: 13px;
+        color: #6b635b;
+    }
+}
+.book_item:hover{
+    background: url('open-book.jpg') no-repeat 0% 50%;
+}
+.book_cover{
+    max-width: 150px;
+    margin-right: 15px;
+    float: left;
+    display:block;
+}
+.top_menu{
+    font-family: 'Fira Sans', sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+
+    h1{
+        font-size: 19px;
+        font-weight: 900;
+        margin:0;
+    }
+
+    a{
+        color: #a57d5a !important;
+    }
+}
+.search_btn{
+    background: #a57d5a;
+    color:#fff;
+}
+.pagination a{
+    color: #653306 !important;
+}
+.author_item{
+    display:block;
+    margin-bottom: 8px;
+}
+.download_href{
+    font-family: 'Fira Sans', sans-serif;
+    font-size: 25px;
+    font-weight: 900;
+    margin: 0 20px 20px 0;
 }
