--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -36,7 +36,7 @@ a:hover{
 .book_item{
     padding-left:40px;
     margin-bottom:20px;
-    background: url('closed_book.png') no-repeat 0% 50%;
+    background: url('http://findbook.in.ua/assets/images/closed_book.png') no-repeat 0% 50%;
 
     .label{
         opacity:0.7;
@@ -47,7 +47,7 @@ a:hover{
     }
 }
 .book_item:hover{
-    background: url('open-book.jpg') no-repeat 0% 50%;
+    background: url('http://findbook.in.ua/assets/images/open-book.jpg') no-repeat 0% 50%;
 }
 .book_cover{
     max-width: 150px;
