--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -2,3 +2,4 @@
   <a href='/genres/<%= item.seo%>'><span class="glyphicon glyphicon-bookmark" aria-hidden="true"></span> <%= item.title%></a><br/>
 <% end %>
 
+<% content_for(:title, "Книги по жанрах") %> 
