--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -35,3 +35,7 @@
     </a>
   <% end %>
 </div>
+
+
+<% content_for(:title, "#{@book.title}. #{@book.author_title}. Книга скачати безкоштовно або купити") %> 
+<% content_for(:description, "#{@book.title}. #{@book.author_title}. Скачати книжку безкоштовно або купити з доставкою") %> 
