--- a/app/views/genres/show.html.erb
+++ b/app/views/genres/show.html.erb
@@ -3,3 +3,6 @@
 <%= render partial: "books/list", collection: @items, as: :item  %>
 
 <%= render partial: "layouts/paginator" %>
+
+
+<% content_for(:title, "#{@genre.title}. Тег. Книги") %> 
