--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -2,3 +2,4 @@
   <a href='/tags/<%= item.seo%>' class="label label-default"><%= item.title%></a>
 <% end %>
 <%= render partial: "layouts/paginator" %>
+<% content_for(:title, 'Книги по тегах') %> 
