--- a/app/views/authors/show.html.erb
+++ b/app/views/authors/show.html.erb
@@ -3,3 +3,5 @@
 <%= render partial: "books/list", collection: @items, as: :item  %>
 
 <%= render partial: "layouts/paginator" %>
+
+<% content_for(:title, "#{@author.full_name}. Скачати книги безкоштовно або купити з доставкою") %> 
