--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,17 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+html{
+    min-height: 100%;
+    position:relative;
+}
+footer{
+    position: absolute;
+    bottom:0;
+    padding: 0 10px 3px;
+    width:100%;
+}
+
 a{
     color: #653306;
 }
@@ -86,4 +97,14 @@ a:hover{
     font-size: 25px;
     font-weight: 900;
     margin: 0 20px 20px 0;
+}
+.soc_butt_wrap {
+    float: left;
+    margin-right: 15px;
+}
+.soc_chains{
+    margin-left: 35%;
+}
+.pagination{
+    margin-bottom: 27px;
 }
