--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,8 +21,7 @@ html{
     position:relative;
 }
 footer{
-    position: absolute;
-    bottom:0;
+    margin-top: 35px;
     padding: 0 10px 3px;
     width:100%;
 }
@@ -107,4 +106,28 @@ a:hover{
 }
 .pagination{
     margin-bottom: 27px;
+}
+.book_search_form{
+    margin-bottom: 50px;
+}
+.book_panel_link{
+    display: block;
+    text-align:center;
+    height:400px;
+    margin-bottom: 10px;
+
+    img{
+        max-width:100%;
+        max-height:350px;
+        display: block;
+        margin: 0 auto;
+    }
+    img:hover{
+        box-shadow: 0 0 6px #e68d08;
+        transition: all 200ms ease-out;
+    }
+}
+.search_description{
+    margin-top:15px;
+    text-align:center;
 }
