--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -1,3 +1,5 @@
 <%= render partial: "authors/list", collection: @items, as: :item  %>
 
 <%= render partial: "layouts/paginator" %>
+
+<%= render partial: "layouts/book_search_form" %>
