--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -2,4 +2,6 @@
   <a href='/tags/<%= item.seo%>' class="label label-default"><%= item.title%></a>
 <% end %>
 <%= render partial: "layouts/paginator" %>
-<% content_for(:title, 'Книги по тегах') %> 
+<% content_for(:title, 'Книги по тегах') %>
+
+<%= render partial: "layouts/book_search_form" %> 
