--- a/app/views/layouts/_book_search_form.html.erb
+++ b/app/views/layouts/_book_search_form.html.erb
@@ -16,7 +16,7 @@
   </div>
   <div class="row">
     <div class="col-lg-6 block_center">
-      <p class="search_description">За допомогою пошуку Ви можете знайти книги в електронному (txt, rtf, doc, pdf, fb2, epub, mobi, djvu) та паперовому форматі будь-які книги доступні в інтернеті українською мовою. </p>
+      <p class="search_description">За допомогою пошуку Ви можете знайти книги в електронному (txt, rtf, doc, pdf, fb2, epub, mobi, djvu) та паперовому форматі, будь-які книги доступні в інтернеті українською мовою. </p>
     </div>
   </div>
 </div>
