--- a/app/views/layouts/_book_search_form.html.erb
+++ b/app/views/layouts/_book_search_form.html.erb
@@ -1,4 +1,5 @@
 <div class="clearfix"></div>
+<div class="container">
 <div class="row book_search_form">
   <div class="row">
     <div class="col-lg-4 block_center">
@@ -21,3 +22,4 @@
   </div>
 </div>
 
+</div>
