--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -1,3 +1,4 @@
+<h3>Жанри</h3>
 <% @items.each do |item|%>
   <a href='/genres/<%= item.seo%>'><span class="glyphicon glyphicon-bookmark" aria-hidden="true"></span> <%= item.title%></a><br/>
 <% end %>
