--- a/app/views/layouts/_book_search_form.html.erb
+++ b/app/views/layouts/_book_search_form.html.erb
@@ -11,6 +11,12 @@
               <input type="submit" value="Шукати!" class="btn btn-default search_btn" type="button">
             </span>
           </div>
+
+            <div class="clearfix"></div>
+
+            <a class="pull-right" href="/extended_search"><small>розширений пошук</small></a>
+            <div class="clearfix"></div>
+
       </form>
     </div>
 
