--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -1,3 +1,4 @@
+<h3>Автори</h3>
 <%= render partial: "authors/list", collection: @items, as: :item  %>
 
 <%= render partial: "layouts/paginator" %>
