--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -24,7 +24,7 @@
   <div class="clearfix"></div>
 
   <div>
-    <h3>Доступні формати:</h3>
+    <h3 class="bold">Доступні формати:</h3>
 
     <% $book_formats.each do |frmt| %>
       <% next unless @book[frmt] %>
@@ -35,6 +35,12 @@
           <%=frmt == 'paper' ? 'папір' : frmt.upcase %>
       </a>
     <% end %>
+  </div>
+
+  <div class="bottom_description">
+    <p>
+      В бібліотеці зібрані всі книги українською мовою в електронному (txt, rtf, doc, pdf, fb2, epub, mobi, djvu) та паперовому форматі. Книжку можна безкоштовно скачати клікнувши на необхідний Вам формат або купити паперовий варіант тексту з доставкою по Україні. Сайт бібліотеки оптимізований для роботи на смартфонах і планшетах. Потрібну книгу Ви можете легко знайти за допомогою пошуку.
+    </p>
   </div>
 </div>
 
