--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -96,6 +96,7 @@ a:hover{
     font-size: 25px;
     font-weight: 900;
     margin: 0 20px 20px 0;
+    cursor:pointer;
 }
 .soc_butt_wrap {
     float: left;
@@ -139,4 +140,18 @@ a:hover{
     .book_panel_link{
         height: 280px;
     }
+}
+.bottom_description{
+    border-top: 1px dashed #9e9c98;
+    border-bottom: 1px dashed #9e9c98;
+    margin-top: 30px; 
+    padding: 10px 0 5px;
+
+    p{
+        color: #7b7874;
+        text-align: justify;
+    }
+}
+.bold{
+    font-weight: 700;
 }
