--- a/app/views/authors/_list.html.erb
+++ b/app/views/authors/_list.html.erb
@@ -1,1 +1,1 @@
-<a class="author_item" href='/authors/<%= item.seo%>'><span class="glyphicon glyphicon-user" aria-hidden="true"></span> <%= item.title%></a>
+<a class="author_item" href='/authors/<%= item.seo%>'><span class="glyphicon glyphicon-user" aria-hidden="true"></span> <%= item.display_title%></a>
