--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -2,7 +2,7 @@
     <a href='/books/<%= item.seo%>'><%= item.title%></a><br/>
     <% if item.authors.loaded? %>
       <% item.authors.each do |author|%>
-        <a class="author_link" href='/authors/<%= author.seo%>'><%= author.full_name%></a><br/>
+        <a class="author_link" href='/authors/<%= author.seo%>'><%= author.display_title%></a><br/>
       <% end %>
     <% end %>
 
