--- a/app/views/layouts/_book_search_form.html.erb
+++ b/app/views/layouts/_book_search_form.html.erb
@@ -6,7 +6,7 @@
       <h2>пошук книг</h2>
       <form action="/search" method="get">
           <div class="input-group">
-            <input name="word" value="" required type="text" class="form-control" placeholder="введіть назву книги або ім'я автора">
+            <input name="word" value="<%= @search_word %>" required type="text" class="form-control" placeholder="введіть назву книги або ім'я автора">
             <span class="input-group-btn">
               <input type="submit" value="Шукати!" class="btn btn-default search_btn" type="button">
             </span>
