--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -1,4 +1,4 @@
 <h2><%= @tag.title %></h2>
 <%= render partial: "books/list", collection: @items, as: :item  %>
 <%= render partial: "layouts/paginator" %>
-<% content_for(:title, "#{@tag.title}. Тег. Книги") %> 
+<% content_for(:title, "#{@tag.uk}. Тег. Книги") %> 
