--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,6 +40,7 @@
       ga('send', 'pageview');
 
     </script>
+    <meta name="yandex-verification" content="15b57edcab4c0fee" />
   </head>
   <body>
 <!-- navbar-default -->
