--- a/app/views/layouts/_paginator.html.erb
+++ b/app/views/layouts/_paginator.html.erb
@@ -1,7 +1,3 @@
-<nav class="col-centered" aria-label="Page navigation">
-  <ul class="pagination">
-    <% (@items_total/@per_page).ceil.times do |page|%>
-    <li><a href="<%=@current_path%>?page=<%=page %>"><%=page+1 %></a></li>
-    <% end %>
-  </ul>
+<nav class="paginator_wrapper" aria-label="Page navigation">
+  <%= will_paginate @items, renderer: BootstrapPagination::Rails, previous_label: '← попередня', next_label: 'наступна →' %>
 </nav>
