--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= content_for?(:title) ? yield(:title) : "Книги. Скачати безплатно, купити" %></title>
-    <meta name="keywords" content="<%= yield(:keywords) if content_for?(:keywords) %>" />
+    <meta name="keywords" content="<%= content_for?(:keywords) ? yield(:keywords) : 'Книги Скачати безплатно купити txt rtf doc pdf fb2 epub mobi djvu українською доставка електронна бібліотека' %>" />
     <meta name="description" content="<%= content_for?(:description) ? yield(:description) : 'Онлайн бібліотека електронних книг txt, rtf, doc, pdf, fb2, epub, mobi, djvu. Пошук паперових книг' %>" />
     <meta name="og:title" content="<%= content_for?(:title) ? yield(:title) : "Книги. Скачати безплатно, купити" %>" />
     <meta name="og:description" content="<%= content_for?(:description) ? yield(:description) : 'Онлайн бібліотека електронних книг txt, rtf, doc, pdf, fb2, epub, mobi, djvu. Пошук паперових книг' %>" />
