--- a/app/views/layouts/_paginator.html.erb
+++ b/app/views/layouts/_paginator.html.erb
@@ -1,3 +1,3 @@
 <nav class="paginator_wrapper" aria-label="Page navigation">
-  <%= will_paginate @items, renderer: BootstrapPagination::Rails, previous_label: '← попередня', next_label: 'наступна →' %>
+  <%= will_paginate @items, renderer: BootstrapPagination::Rails, previous_label: '←', next_label: '→' %>
 </nav>
