--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -94,7 +94,7 @@
         </div> -->
 
 
-        <small class="pull-right"><a href="/contacts">контакти</a></small>
+        <small class="pull-right contacts_href"><a href="/contacts">контакти</a></small>
         <div class="clearfix"></div>
     </footer>
 
