--- a/app/views/admin/articles/index.html.erb
+++ b/app/views/admin/articles/index.html.erb
@@ -1,2 +1,28 @@
+<div class="panel panel-primary"> 
+    <div class="panel-heading"> 
+        <h3 class="panel-title">Articles</h3> 
+    </div> 
+    <div class="panel-body"> 
 
-<h2>Articles</h2>
+    <table class="table table-hover"> 
+        <thead> 
+            <tr> 
+                <th>#</th> 
+                <th>Title</th> 
+                <th>Status</th> 
+                <th>actions</th> 
+            </tr> 
+        </thead> 
+        <tbody> 
+            <tr> 
+                <th scope="row">1</th> 
+                <td>Mark</td> 
+                <td>Otto</td> 
+                <td>@mdo</td> 
+            </tr> 
+        </tbody> 
+    </table>
+
+
+    </div> 
+</div>
