--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -71,19 +71,22 @@
       <div class="clearfix"></div>
     </div> <!-- /container -->
 
-    <footer class="container">
+    <footer >
         <!-- <p>&copy; Company 2016</p> -->
-        <div class="row">
-          <div class="col-lg-4 col-xs-6 block_center">
-            <div class="soc_butt_wrap" style="width:60px"><div class="g-plusone" data-size="medium" data-annotation="bubble"></div></div>
-            <div class="soc_butt_wrap"><div class="fb-like" data-send="false" data-layout="button_count" data-width="150" data-show-faces="true"></div></div>
-            <div class="soc_butt_wrap">
-                <a href="https://twitter.com/share" class="twitter-share-button" data-lang="uk">Твіт</a>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-4 col-xs-6 block_center">
+              <div class="soc_butt_wrap" style="width:60px"><div class="g-plusone" data-size="medium" data-annotation="bubble"></div></div>
+              <div class="soc_butt_wrap"><div class="fb-like" data-send="false" data-layout="button_count" data-width="150" data-show-faces="true"></div></div>
+              <div class="soc_butt_wrap">
+                  <a href="https://twitter.com/share" class="twitter-share-button" data-lang="uk">Твіт</a>
+              </div>
+              <div class="clearfix"></div>
             </div>
+            <small class="pull-right contacts_href"><a href="/contacts">контакти</a></small>
             <div class="clearfix"></div>
           </div>
         </div>
-
         <!-- <div class='soc_chains pull-left'>
           <div class="soc_butt_wrap" style="width:60px"><div class="g-plusone" data-size="medium" data-annotation="bubble"></div></div>
           <div class="soc_butt_wrap"><div class="fb-like" data-send="false" data-layout="button_count" data-width="150" data-show-faces="true"></div></div>
@@ -94,8 +97,7 @@
         </div> -->
 
 
-        <small class="pull-right contacts_href"><a href="/contacts">контакти</a></small>
-        <div class="clearfix"></div>
+        
     </footer>
 
     <%= yield(:footer_js) if content_for?(:footer_js) %>
