--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,12 +10,15 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
+ *= require jquery-ui
  *= require_tree .
  *= require_self
+
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "bootstrap-wysihtml5/bootstrap3-wysihtml5";
+
 
 html{
     min-height: 100%;
@@ -180,4 +183,7 @@ a:hover{
 }
 .contacts_href{
     margin-top: -20px;
+}
+.books_pool{
+    margin: 10px 0;
 }
