--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -187,3 +187,40 @@ a:hover{
 .books_pool{
     margin: 10px 0;
 }
+.list_href{
+    position: relative;
+    display: block;
+    font-family: 'Fira Sans', sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    color:#fff;
+    text-shadow: 0px 0px 2px #000;
+    margin-bottom: 30px;
+
+    img{
+        width:100%;
+        max-width: 100%;
+        -moz-transition: all 0.3s;
+        -webkit-transition: all 0.3s;
+        transition: all 0.3s;
+    }
+
+    div{
+        position: absolute;
+        top:40%;
+        width: 100%;
+        text-align:center;
+    }
+}
+.list_href:hover{
+    color:#fff;
+
+    img {
+        -moz-transform: scale(1.1);
+        -webkit-transform: scale(1.1);
+        transform: scale(1.1);
+    }
+}
+.description_book_item{
+    margin-bottom: 30px;
+}
