--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,7 +1,4 @@
-<% @items.each do |item|%>
-  <a href='/tags/<%= item.seo%>' class="label label-default"><%= item.uk%></a>
-<% end %>
+<h2 class="section_title">Списки книг:</h2>
+<%= render partial: "lists/item", collection: @items, as: :list  %>
 <%= render partial: "layouts/paginator" %>
-<% content_for(:title, 'Книги по тегах') %>
-
-<%= render partial: "layouts/book_search_form" %> 
+<% content_for(:title, 'Підбірки книг') %>
