--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -196,6 +196,7 @@ a:hover{
     color:#fff;
     text-shadow: 0px 0px 2px #000;
     margin-bottom: 30px;
+    padding: 0;
 
     img{
         width:100%;
