href_look, book admin

--- a/app/views/admin/admin/index.html.erb
+++ b/app/views/admin/admin/index.html.erb
@@ -1,4 +1,6 @@
 
 <h2>admin</h2>
-<a href="/admin/articles">Blog</a>
-<a href="/admin/lists">Lists</a>
+<a href="/admin/articles">Blog</a><br/>
+<a href="/admin/lists">Lists</a><br/>
+<a href="/admin/books">Books</a>
+
