--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -192,35 +192,31 @@ a:hover{
     display: block;
     font-family: 'Fira Sans', sans-serif;
     font-weight: 700;
-    font-size: 18px;
+    font-size: 20px;
     color:#fff;
-    text-shadow: 0px 0px 2px #000;
+    text-shadow: 0px 0px 10px #000;
     margin-bottom: 30px;
     padding: 0;
 
     img{
         width:100%;
         max-width: 100%;
-        -moz-transition: all 0.3s;
-        -webkit-transition: all 0.3s;
-        transition: all 0.3s;
     }
 
     div{
         position: absolute;
-        top:40%;
+        top:0;
         width: 100%;
+        height:80%;
+        padding-top:20%;
         text-align:center;
+        background: url('http://findbook.in.ua/assets/images/fake-brick.png') repeat 0% 0%;
     }
 }
 .list_href:hover{
     color:#fff;
-
-    img {
-        -moz-transform: scale(1.05);
-        -webkit-transform: scale(1.05);
-        transform: scale(1.05);
-    }
+    box-shadow: 0 0 6px #e68d08;
+    transition: all 200ms ease-out;
 }
 .description_book_item{
     margin-bottom: 30px;
