--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -93,5 +93,6 @@
     </footer>
 
     <%= yield(:footer_js) if content_for?(:footer_js) %>
+    <script id="dsq-count-scr" src="//findbook-in-ua.disqus.com/count.js" async></script>
   </body>
 </html>
