--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -37,6 +37,28 @@
     <% end %>
   </div>
 
+  <div id="disqus_thread"></div>
+  <script>
+
+  /**
+  *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+  *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+  /*
+  var disqus_config = function () {
+  this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+  this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+  };
+  */
+  (function() { // DON'T EDIT BELOW THIS LINE
+  var d = document, s = d.createElement('script');
+  s.src = 'https://findbook-in-ua.disqus.com/embed.js';
+  s.setAttribute('data-timestamp', +new Date());
+  (d.head || d.body).appendChild(s);
+  })();
+  </script>
+  <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+                                  
+
   <div class="bottom_description">
     <p>
       В бібліотеці зібрані всі книги українською мовою в електронному (txt, rtf, doc, pdf, fb2, epub, mobi, djvu) та паперовому форматі. Книжку можна безкоштовно скачати клікнувши на необхідний Вам формат або купити паперовий варіант тексту з доставкою по Україні. Сайт бібліотеки оптимізований для роботи на смартфонах і планшетах. Потрібну книгу Ви можете легко знайти за допомогою пошуку.
