--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -113,6 +113,7 @@ a:hover{
     font-weight: 900;
     margin: 0 20px 20px 0;
     cursor:pointer;
+    white-space: nowrap;
 }
 .soc_butt_wrap {
     float: left;
