--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -5,4 +5,4 @@
 
 <%= render partial: "layouts/book_search_form" %>
 
-<% content_for(:title, "Книги по жанрах") %> 
+<% content_for(:title, "Книги по жанрах. Скачти fb2, epub, mobi, pdf, djvu, txt, rtf, doc") %> 
