--- a/app/views/genres/show.html.erb
+++ b/app/views/genres/show.html.erb
@@ -5,4 +5,4 @@
 <%= render partial: "layouts/paginator" %>
 <%= render partial: "layouts/book_search_form" %>
 
-<% content_for(:title, "#{@genre.title}. Тег. Книги") %> 
+<% content_for(:title, "#{@genre.title}. Книги cкачти fb2, epub, mobi, pdf, djvu, txt, rtf, doc") %> 
