--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -260,3 +260,7 @@ a:hover{
     border-top: 1px dashed #9e9c98;
     margin-top: 45px;
 }
+.read_also{
+    height: auto !important;
+    max-height: 270px;
+}
