--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,12 +15,12 @@
     <%= yield(:meta) if content_for?(:meta) %>
 
 
+    <%= stylesheet_link_tag "application", :media => "all" %>
     <%= favicon_link_tag 'apple-touch-icon-144x144.png', :rel => 'apple-touch-icon', :type => 'image/png', :sizes => '144x144' %>
     <%= favicon_link_tag 'apple-touch-icon-114x114.png', :rel => 'apple-touch-icon', :type => 'image/png', :sizes => '114x114' %>
     <%= favicon_link_tag 'apple-touch-icon-72x72.png', :rel => 'apple-touch-icon', :type => 'image/png', :sizes => '72x72' %>
     <%= favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
-    <link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,700,800,900&amp;subset=cyrillic-ext" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,700,800,900&amp;subset=cyrillic-ext" rel="stylesheet" async>
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
@@ -88,10 +88,7 @@
         </div>
     </footer>
 
-    <%= stylesheet_link_tag "application", :media => "all" %>
-    
-    <%= javascript_include_tag "application" %>
-
+     <%= javascript_include_tag "application" %>
     <%= yield(:js) if content_for?(:js) %>
     <%= yield(:footer_js) if content_for?(:footer_js) %>
     <script id="dsq-count-scr" src="//findbook-in-ua.disqus.com/count.js" async></script>
