--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -93,6 +93,13 @@
     <%= yield(:js) if content_for?(:js) %>
     <%= yield(:footer_js) if content_for?(:footer_js) %>
     <script id="dsq-count-scr" src="//findbook-in-ua.disqus.com/count.js" async></script>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-7724914382232630",
+        enable_page_level_ads: true
+      });
+    </script>
     
   </body>
 </html>
